Enhance Snake Game with new features and improved mechanics
- Expanded README.md to include new game mechanics, controls, and status indicators.
- Updated Rust logic in src/lib.rs to implement a reward system, game status tracking, and collision detection.
- Modified TypeScript code in www/index.ts to integrate game status display and manage game start functionality.
- Improved HTML structure in www/index.html to include game status and play button.
- Added utility function for random number generation in www/utils/rnd.ts.

--- a/www/index.html
+++ b/www/index.html
@@ -16,11 +16,36 @@
         justify-content: center;
         flex-direction: column;
       }
+      .game-panel {
+        margin-bottom: 20px;
+      }
+      .flex {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        width: 100%;
+      }
+      .flex button {
+        width: 100%;
+      }
+      .label {
+        font-weight: bold;
+        margin-right: 10px;
+      }
     </style>
   </head>
   <body>
     <div class="game-container">
-      <p>Snake Game</p>
+      <div class="game-panel">
+        <div class="flex">
+          <div class="label">Status:</div>
+          <div id="game-status">None</div>
+        </div>
+        <div class="flex">
+          <button id="game-btn">Play</button>
+        </div>
+      </div>
       <canvas id="snake-canvas"></canvas>
     </div>
     <script src="./bootstrap.js"></script>
