--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
       .flex {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         gap: 10px;
         width: 100%;
       }
@@ -41,6 +41,10 @@
         <div class="flex">
           <div class="label">Status:</div>
           <div id="game-status">None</div>
+        </div>
+        <div class="flex">
+          <div class="label">Points:</div>
+          <div id="points">0</div>
         </div>
         <div class="flex">
           <button id="game-btn">Play</button>
